--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.23.1",
+    "npm-install-webpack-plugin": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.13.0"
