--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "style-loader": "^0.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.13.0"
+  },
+  "dependencies": {
+    "webpack": "^1.13.1"
   }
 }
