Render through index.jsx

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "webpack-merge": "^0.13.0"
   },
   "dependencies": {
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "webpack": "^1.13.1"
   }
 }
