Activate Hot Loading for Development

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,12 @@
     "es2016",
     "react",
     "survivejs-kanban"
-  ]
+  ],
+  "env": {
+    "start": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
