--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm-install-webpack-plugin": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.13.0"
+    "webpack-merge": "^0.13.0",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "alt": "^0.18.4",
@@ -30,11 +31,9 @@
     "alt-utils": "^1.0.0",
     "node-uuid": "^1.4.7",
     "react": "^15.1.0",
-    "react-addons": "^0.9.1-deprecated",
     "react-addons-update": "^15.1.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.1.0",
-    "webpack": "^1.13.1"
+    "react-dom": "^15.1.0"
   }
 }
