--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "webpack-dev-server",
     "stats": "webpack --profile --json > stats.json",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "test": "karma start",
+    "tdd": "karma start --auto-watch --no-single-run"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +27,19 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.19.0",
     "html-webpack-template": "^5.0.0",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "karma": "^0.13.22",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3",
     "npm-install-webpack-plugin": "^4.0.0",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "react-addons-test-utils": "^15.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
