Connect ESLint with package.json

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "deploy": "gh-pages -d build",
     "test": "karma start",
     "tdd": "karma start --auto-watch --no-single-run",
-    "flow": "flow check"
+    "flow": "flow check",
+    "lint": "eslint . --ext .js --ext .jsx --format 'node_modules/eslint-friendly-formatter'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-es2016": "^6.0.11",
@@ -25,13 +27,14 @@
     "babel-preset-survivejs-kanban": "^0.3.3",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
+    "eslint": "^2.11.1",
+    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.19.0",
     "html-webpack-template": "^5.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "jshint": "^2.9.2",
-    "jshint-loader": "^0.8.3",
     "karma": "^0.13.22",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
