--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-friendly-formatter": "^2.0.5",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
