--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "npm-install-webpack-plugin": "^4.0.0",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
     "react-dnd-test-backend": "^1.0.2",
     "style-loader": "^0.13.1",
+    "stylelint": "^6.5.1",
+    "stylelint-config-suitcss": "^6.0.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.13.0"
