--- a/package.json
+++ b/package.json
@@ -1,71 +1,73 @@
 {
-    "name": "kanban_app",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "webpack",
-        "start": "webpack-dev-server",
-        "stats": "webpack --profile --json > stats.json",
-        "deploy": "gh-pages -d build",
-        "test": "karma start",
-        "tdd": "karma start --auto-watch --no-single-run",
-        "flow": "flow check",
-        "lint": "eslint . --ext .js --ext .jsx --format 'node_modules/eslint-friendly-formatter'"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.9.0",
-        "babel-eslint": "^6.0.4",
-        "babel-loader": "^6.2.4",
-        "babel-plugin-typecheck": "^3.9.0",
-        "babel-preset-es2016": "^6.0.11",
-        "babel-preset-react": "^6.5.0",
-        "babel-preset-react-hmre": "^1.1.1",
-        "babel-preset-survivejs-kanban": "^0.3.3",
-        "clean-webpack-plugin": "^0.1.9",
-        "css-loader": "^0.23.1",
-        "eslint": "^2.11.1",
-        "eslint-friendly-formatter": "^2.0.5",
-        "eslint-loader": "^1.3.0",
-        "eslint-plugin-react": "^5.1.1",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "gh-pages": "^0.11.0",
-        "html-webpack-plugin": "^2.19.0",
-        "html-webpack-template": "^5.0.0",
-        "isparta-instrumenter-loader": "^1.0.0",
-        "karma": "^0.13.22",
-        "karma-coverage": "^1.0.0",
-        "karma-mocha": "^1.0.1",
-        "karma-phantomjs-launcher": "^1.0.0",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "0.0.26",
-        "karma-webpack": "^1.7.0",
-        "mocha": "^2.5.3",
-        "npm-install-webpack-plugin": "^4.0.0",
-        "phantomjs-polyfill": "0.0.2",
-        "phantomjs-prebuilt": "^2.1.7",
-        "postcss-loader": "^0.9.1",
-        "react-addons-test-utils": "^15.1.0",
-        "react-dnd-test-backend": "^1.0.2",
-        "style-loader": "^0.13.1",
-        "stylelint": "^6.5.1",
-        "stylelint-config-suitcss": "^6.0.0",
-        "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1",
-        "webpack-merge": "^0.14.0"
-    },
-    "dependencies": {
-        "alt": "^0.18.4",
-        "alt-container": "^1.0.2",
-        "alt-utils": "^1.0.0",
-        "node-uuid": "^1.4.7",
-        "react": "^15.1.0",
-        "react-addons-update": "^15.1.0",
-        "react-dnd": "^2.1.4",
-        "react-dnd-html5-backend": "^2.1.2",
-        "react-dom": "^15.1.0"
-    }
+  "name": "kanban_app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server",
+    "stats": "webpack --profile --json > stats.json",
+    "deploy": "gh-pages -d build",
+    "test": "karma start",
+    "tdd": "karma start --auto-watch --no-single-run",
+    "flow": "flow check",
+    "lint": "eslint . --ext .js --ext .jsx --format 'node_modules/eslint-friendly-formatter'"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-es2016": "^6.0.11",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-survivejs-kanban": "^0.3.3",
+    "clean-webpack-plugin": "^0.1.9",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.11.1",
+    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "^2.19.0",
+    "html-webpack-template": "^5.0.0",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "karma": "^0.13.22",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3",
+    "npm-install-webpack-plugin": "^4.0.0",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dnd-test-backend": "^1.0.2",
+    "style-loader": "^0.13.1",
+    "stylelint": "^6.5.1",
+    "stylelint-config-suitcss": "^6.0.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
+  },
+  "dependencies": {
+    "alt": "^0.18.4",
+    "alt-container": "^1.0.2",
+    "alt-utils": "^1.0.0",
+    "node-uuid": "^1.4.7",
+    "react": "^15.1.0",
+    "react-addons-update": "^15.1.0",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^15.1.0"
+  }
 }
